--- a/public/css/chatstyle.css
+++ b/public/css/chatstyle.css
@@ -1,8 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Muli:wght@300;400;600;800&display=swap');
 body {
-    background: whitesmoke;
+  /* background-image: linear-gradient(-45deg, #b198dc 0%,  #45a8c1 100%);
+  
+  */
+  /* background-image: url(https://images.unsplash.com/photo-1518384401463-d3876163c195?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074&q=80); */
+    background-repeat: no-repeat;
+    background-color: whitesmoke;
+    background-size:contain ;
+    overflow-x: hidden;
+    overflow-y: auto;
     -wekit-font-smoothing: antialiased;
     font-family: 'Muli', sans-serif;
+}
+.container {
+    background-image: url(https://images.unsplash.com/photo-1518384401463-d3876163c195?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074&q=80);
+    /* margin:4px, 4px;
+    padding:4px; */
+/* 
+    width: 500px;
+    height: 110px;  */
+    overflow-x: hidden;
+    overflow-y: auto;
+    text-align:justify;
 }
 .comment__box {
     list-style-type: none;
